# exst

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  Statistics.xlsx  configure.sh  coverage.sh  test_travis.sh
Experiments/: AllPlots.Rmd  AllPlotsPerProblem.Rmd  InterestingPlotsPerProblem.Rmd  Parameters.csv  Parameters_old.csv  README.md  Results.Rmd  Results.html  Statistics.csv  Summary.Rmd  Summary.html  Summary_1s.Rmd  Summary_1s.html  Summary_1s_old.html  analysis.Rmd  analysis2.Rmd  generateStatistics.py
TestData/: myColor.txt  myGraphInstance.asp  myGraphSmall.asp  myGraphSmall.txt  queens1_small.txt  queens2_small.txt  queens_1.txt  queens_2.txt  queens_video
TestScripts/: clasp_app-colour-test-all.sh  clasp_app-colour-test-small-all.sh  clasp_app-colour-test-small.sh  clasp_app-colour-test.sh  clasp_app-help.sh  clasp_app-queens-1-small-all.sh  clasp_app-queens-1-small.sh  clasp_app-queens-1.sh  clasp_app-queens-2-small-all.sh  clasp_app-queens-2-small.sh  clasp_app-queens-2.sh  clasp_app.sh  multi_test.sh  multi_test_exst.sh  rebuild.sh  rebuild_htd.sh
Test_Results/Local/result-14.07_1300/: _result_
Test_Results/Local/result-14.07_1300/result_1000s/: default_clasp_000206_combined_configuration_problem-0-0.asp_number_0  (+17 more)
Tests/: coverage.sh  runTests.sh
Tests/data/: graph_colouring_small.lp  n_queens.lp  n_queens_big.lp  n_queens_small.lp
Tests/scripts/: Test_Graph_Colouring.bats  Test_N_Queens.bats  multi_test.sh  multi_test_exst.sh  runSystemTests.sh
Times/: getAssignments.py  getStats.py  groundPrograms.py  sortFiles.py
app/: CMakeLists.txt  Makefile  clasp_app.cpp  clasp_app.h  cmake_install.cmake  main.cpp
build_vc/vc10/clasp/: clasp.sln
build_vc/vc12/clasp/: clasp.sln
build_vc/vc9/clasp/: clasp.sln  clasp.vcproj
featureExtractor/: exst.py
lib_exst/: CMakeLists.txt  Makefile
lib_exst/exst/: ExstTypes.h  dependency_graph_parameters.h  dependency_graph_stats.h  exst_parameters.h  exst_statistics.h  exst_types.h  extended_stats_calculator.h  graph_stats_calculator.h  incidence_graph_parameters.h  incidence_graph_stats.h  interfaces.h  program_flags.h  program_parameter.h  program_parameters.h  program_stats.h
lib_exst/src/: ExstTypes.cpp  dependency_graph_parameters.cpp  dependency_graph_stats.cpp  exst_parameters.cpp  exst_statistics.cpp  exst_types.cpp  extended_stats_calculator.cpp  graph_stats_calculator.cpp  incidence_graph_parameters.cpp  incidence_graph_stats.cpp  program_flags.cpp  program_parameter.cpp  program_parameters.cpp  program_stats.cpp
lib_exst/tests/: CMakeLists.txt  Makefile  dependency_graph_stats_tests.cpp  dependency_tests.cpp  exstTypes_tests.cpp  exst_statistics_tests.cpp  exst_types_tests.cpp  extended_stats_tests.cpp  incidence_graph_stats_tests.cpp  incidence_tests.cpp  main_tests.cpp  parameter_tests.cpp  program_stats_tests.cpp  system_tests.cpp  test.h
libclasp/: CMakeLists.txt  Makefile  cmake_install.cmake  src#
libclasp/clasp/: asp_preprocessor.h  cb_enumerator.h  clasp_facade.h  claspfwd.h  clause.h  constraint.h  dependency_graph.h  enumerator.h  extended_stats_calculator.h  heuristics.h  literal.h  logic_program.h  logic_program_types.h  lookahead.h  minimize_constraint.h  model_enumerators.h  parallel_solve.h  parser.h  pod_vector.h  program_builder.h  satelite.h  shared_context.h  solve_algorithms.h  solver.h  solver.h.rej  solver_strategies.h  solver_types.h  unfounded_check.h  weight_constraint.h
libclasp/clasp/cli/: clasp_options.h  clasp_output.h
libclasp/clasp/exst/: dependency_graph_stats.h  graph_stats_calculator.h  incidence_graph_stats.h
libclasp/clasp/util/: atomic.h  indexed_priority_queue.h  left_right_sequence.h  misc_types.h  multi_queue.h  mutex.h  platform.h  pod_vector.h  thread.h  timer.h  type_manip.h
libclasp/doc/api/: clasp.txt
libclasp/example/: example.h  example1.cpp  example2.cpp  example3.cpp  example4.cpp  main.cpp
libclasp/src/: asp_preprocessor.cpp  cb_enumerator.cpp  clasp_facade.cpp  clasp_options.cpp  clasp_output.cpp  clause.cpp  constraint.cpp  dependency_graph.cpp  enumerator.cpp  extended_stats_calculator.cpp  heuristics.cpp  logic_program.cpp  logic_program_types.cpp  lookahead.cpp  minimize_constraint.cpp  model_enumerators.cpp  parallel_solve.cpp  parser.cpp  parser.cpp.rej  program_builder.cpp  satelite.cpp  shared_context.cpp  solve_algorithms.cpp  solver.cpp  solver_strategies.cpp  solver_types.cpp  timer.cpp  unfounded_check.cpp  weight_constraint.cpp
libclasp/src/exst/: graph_stats_calculator.cpp
libclasp/tests/: CMakeLists.txt  clause_creator_test.cpp  clause_test.cpp  cli_test.cpp  decision_heuristic_test.cpp  dependency_graph_test.cpp  dlp_builder_test.cpp  enumerator_test.cpp  facade_test.cpp  literal_test.cpp  minimize_test.cpp  parser_test.cpp  program_builder_test.cpp  rule_test.cpp  satelite_test.cpp  shared_clause_test.cpp  solver_test.cpp  test.h  test_main.cpp  unfounded_check_test.cpp  weight_constraint_test.cpp
libprogram_opts/: Makefile  cmake_install.cmake
libprogram_opts/program_opts/: application.h  errors.h  mapped_value.h  program_options.h  string_convert.h  typed_value.h  value.h  value_store.h
libprogram_opts/program_opts/detail/: alarm.h  notifier.h  refcountable.h  value_store.h
libprogram_opts/src/: alarm.cpp  application.cpp  program_options.cpp  string_convert.cpp  value_store.cpp
patches/: clasp.patch
script/: getAssignments.py  getClasp.sh  getClaspfolio.sh  getDuplicates.py  getFinishedAssignments.py  getStats.py  getTimes.py  getTreeWidths.py  groundPrograms.py  preparePrograms.py  usefullCommands.sh
tools/: FindTBB.cmake
(+92 files in other folders)
