file(GLOB APP_SRC *.cpp)
include_directories(${CMAKE_SOURCE_DIR}/libclasp ${CMAKE_SOURCE_DIR}/libprogram_opts ${CMAKE_SOURCE_DIR}/lib_exst)
add_executable(exst ${APP_SRC})
target_link_libraries(exst libclasp libprogram_opts lib_exst)
if (TBB_FOUND)
    MESSAGE(STATUS "TBB found. Building with threads.")
    target_link_libraries(exst tbb)
endif (TBB_FOUND)

set_target_properties(exst PROPERTIES OUTPUT_NAME exst)
SET(EXECUTABLE_OUTPUT_PATH ${CMAKE_BINARY_DIR}/bin)
