file(GLOB LIBEXST_TEST_SRC *.cpp *.h)
include_directories(${CMAKE_SOURCE_DIR}/lib_exst)
add_executable(exst_test ${LIBEXST_TEST_SRC} exst_statistics_tests.cpp)
target_link_libraries(exst_test lib_exst libclasp libprogram_opts cppunit htd)
if (TBB_FOUND)
    MESSAGE(STATUS "TBB found. Building with threads.")
    target_link_libraries(exst_test tbb)
endif (TBB_FOUND)

set_target_properties(exst_test PROPERTIES OUTPUT_NAME exst_test)
SET(EXECUTABLE_OUTPUT_PATH ${CMAKE_BINARY_DIR}/bin)
